Still need to center the middle Bar

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name= "blue">#002F87</color>
     <color name="blue_light">#3E97FF</color>
+    <color name="grey">#bbbbbb</color>
 </resources>
